--- a/assets/globals.less
+++ b/assets/globals.less
@@ -7,8 +7,14 @@
 @background_color: rgba(250, 250, 250, 1.0);
 @text_color: rgb(20, 20, 20);
 
-@toolbar_height: 40px;
+@toolbar_height: 2.5rem;
 @toolbar_background_color: darken(@content_background_color, 10%);
+
+/* There is always this much padding between text and the edge of stuff. */
+@text_padding: 0.25rem;
+
+/* Buttons have thick borders, also used to indicate focus. */
+@button_border_width: 0.125rem;
 
 @content_background_color: white;
 @content_text_color: black;
@@ -50,9 +56,9 @@
     display: block;
     box-sizing: border-box;
 
-    border: 0.125rem solid transparent;
+    border: @button_border_width solid transparent;
     background: transparent;
-    border-radius: 0.25rem;
+    border-radius: @text_padding;
     transition: border-color 0.05s, background 0.1s;
 }
 
