--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -4,18 +4,15 @@
     .content-colors;
 }
 .list-header-inner {
-    padding: 0.25rem;
+    margin: 0 auto;
+    padding: @text_padding;
     box-sizing: border-box;
-}
-.list-header h1 {
-    font-weight: normal;
 }
 
 .layout-narrow .list-header-inner,
 .layout-narrow .top-bar,
 .layout-narrow .bottom-bar {
     max-width: @narrow_width;
-    margin: 0 auto;
 }
 
 .next-link,
