Feed view feed details
Progress on #56.

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -7,6 +7,10 @@
     margin: 0 auto;
     padding: @text_padding;
     box-sizing: border-box;
+
+    details {
+        margin: 1rem 0;
+    }
 }
 
 .layout-narrow .list-header-inner,
