--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -31,19 +31,19 @@
         margin: 0;
     }
 
+    label {
+        flex: 1 1 auto;
+        display: flex;
+        height: 2.5rem;
+        line-height: 2.5rem;
+    }
+
     .tools {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
 
-        label {
-            flex: 1 1 auto;
-            display: flex;
-            height: 2.5rem;
-            line-height: 2.5rem;
-        }
-
-        .remove-button {
+        .remove-button, input[type=submit] {
             flex: 0 1 auto;
             width: auto;
         }
