Update class names

--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -21,12 +21,12 @@
             margin: 1px;
             padding: 0 4px 0 4px;
 
-            .new-link {
+            .unread-link {
                 flex: 1 1 100%;
                 min-width: 0;
                 text-decoration: none !important;
 
-                .feed-title, .new-count {
+                .feed-title, .unread-count {
                     width: 100%;
                     white-space: nowrap;
                     overflow: hidden;
