--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -54,6 +54,10 @@ article {
             margin: 16px 32px;
             border: 0.5px solid @quiet_text_color;
         }
+
+        pre {
+            white-space: pre-wrap;
+        }
     }
 }
 
