Style the about page
Closes #71.

--- a/assets/base.less
+++ b/assets/base.less
@@ -106,6 +106,16 @@ input[type=submit],
     }
 }
 
+.about-page {
+    .content-colors;
+
+    .about-page-inner {
+        max-width: @narrow_width;
+        margin: 0 auto;
+        padding: 1px 0 1px 0; /* disable margin collapsing */
+    }
+}
+
 /* A "floater" is centered and is horizontally centered.  Mainly used for
  * mastheads and error messages. */
 .floater-wrap {
