--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="about-page">
+    <div class="about-page-inner">
     <h1>About Yarrharr</h1>
     <p>Yarrharr is a simple, self-hosted feed reader.</p>
     <h2>What's inside?</h2>
@@ -27,4 +29,6 @@
     additional permission to convey the resulting work.  Corresponding Source
     for a non-source form of such a combination shall include the source code
     for the parts of OpenSSL used as well as that of the covered work.
+    </div>
+</div>
 {% endblock %}
