Rename SVG files
No need for this "inkscape" convention when Webpack is responsible for
generating hash filenames.

--- a/assets/widgets/Label.less
+++ b/assets/widgets/Label.less
@@ -9,7 +9,7 @@
 .label-text {
     display: inline-block;
     padding: 0.5em 0.75em 0.5em 1em;
-    background: no-repeat -0.5em 50% url('../art/label.inkscape.svg');
+    background: no-repeat -0.5em 50% url('../art/label.svg');
 }
 
 a.label-x:link,
