Improved Heart icon, FaveToggleButton
Now with fancy visual effects! And less flashing (WIP on #86).

--- a/assets/base.less
+++ b/assets/base.less
@@ -150,8 +150,9 @@ input[type=submit],
         .flat-button-focus;
     }
 
-    & > * > img {
+    & > * > .icon {
         display: block;
+        font-size: 40px; /* icon size */
     }
 
     & > .expand {
