--- a/assets/widgets/icons.less
+++ b/assets/widgets/icons.less
@@ -1,12 +1,12 @@
 @heart_color: #9b1559;
-
-.icon {
-    width: 1em;
-    height: 1em;
-}
+@check_color: #2a6e12;
 
 .icon-heart {
     fill: @heart_color;
+    transition: fill 200ms;
+}
+.icon-check {
+    fill: @check_color;
     transition: fill 200ms;
 }
 .icon-empty {
