--- a/assets/globals.less
+++ b/assets/globals.less
@@ -16,6 +16,11 @@
 /* Buttons have thick borders, also used to indicate focus. */
 @button_border_width: 0.125rem;
 
+@icon_size: 2.3rem;
+
+@bar_line_height: 1.25rem;
+@bar_height: ((2 * @bar_line_height + 2 * @text_padding + 2 * @button_border_width));
+
 @content_background_color: white;
 @content_text_color: black;
 @quiet_text_color: lighten(@content_text_color, 40%);
