More key warnings

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -40,6 +40,11 @@
     }
 }
 
+.prev-link.expand {
+    div:last-child { padding-right: 0.25rem; }
+}
+
 .next-link.expand {
     text-align: right;
+    div:first-child { padding-left: 0.25rem; }
 }
