--- a/assets/widgets/Label.less
+++ b/assets/widgets/Label.less
@@ -19,11 +19,13 @@ a > .label {
     display: flex;
     flex-flow: row wrap;
 
-    label {
+    & > * {
         flex: 0 0 auto;
         display: flex;
         align-items: center;
         justify-content: center;
+        width: auto;
+        margin: 0 1em 0 0;
     }
 }
 
