Fix up styling a bit

--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -31,7 +31,7 @@
         margin: 0;
     }
 
-    label {
+    form label {
         flex: 1 1 auto;
         display: flex;
         height: 2.5rem;
