--- a/assets/widgets/Label.less
+++ b/assets/widgets/Label.less
@@ -3,10 +3,11 @@
 .label {
     white-space: nowrap;
     display: inline-block; /* Otherwise the top and bottom borders are too close. */
-    padding: 0 0.4em 0 .7em;
+    padding: 0 0.6em 0 .7em;
+    line-height: 1.8em;
     border-image-source: url("../art/label.svg");
     border-image-slice: 12;
-    border-image-width: 0.45em;
+    border-image-width: 0.55em;
 }
 
 a > .label {
