--- a/assets/base.less
+++ b/assets/base.less
@@ -180,8 +180,8 @@ input[type=submit],
     border: 2px solid rgb(167, 167, 167);
     color: rgb(40, 40, 40);
 
-    padding: 0 .75rem;
-    margin: 0.25rem 0;
+    padding: 0 .5rem;
+    margin: 0.5rem 0;
     /*
     box-shadow: inset .01rem .01rem .25rem rgba(0, 0, 0, 0.25);
     */
@@ -189,20 +189,19 @@ input[type=submit],
 
     justify-content: start;
 
-    .text {
+    .icon {
+        flex: 0 0 1.3rem;
+        margin: 0 0.5rem 0 0;
+    }
+
+    h1 {
+        flex: 1 1 auto;
+        min-width: 0;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-    }
-    h1 {
-        display: inline;
         font: inherit;
-        font-size: 1.2rem;
         margin: 0 0.5rem 0 0;
-    }
-    div {
-        display: inline;
-        font-size: 0.75rem;
     }
 }
 
