--- a/assets/base.less
+++ b/assets/base.less
@@ -19,10 +19,6 @@ h1 {
     font-weight: normal;
 }
 
-.icon {
-    display: inline-block;
-}
-
 :focus {
     outline: 1px dotted;
 }
@@ -121,7 +117,10 @@ input[type=submit],
 }
 
 /* A "floater" is centered and is horizontally centered.  Mainly used for
- * mastheads and error messages. */
+ * mastheads and error messages.
+ *
+ * DEPRECATED
+ */
 .floater-wrap {
     display: flex; /* XXX Why is this display: flex? */
     margin: 1rem .25rem;
