--- a/assets/base.less
+++ b/assets/base.less
@@ -177,6 +177,9 @@ input[type=submit],
 }
 
 .bar-inset {
+    /* This is a mockup so it is hidden for now. */
+    visibility: hidden;
+
     flex: 1 0 0;
     min-width: 0; /* allow shrinking below content size */
 
