--- a/assets/base.less
+++ b/assets/base.less
@@ -7,8 +7,7 @@
 html {
     background: @background_color;
     color: @text_color;
-    font-size: 14px;
-    line-height: 20px;
+    line-height: 1.4;
     font-family: sans-serif;
     margin: 0;
     padding: 0;
@@ -209,6 +208,43 @@ input[type=submit],
         font: inherit;
         margin: 0 0.5rem 0 0;
     }
+}
+
+/**
+ * <div.tabs>
+ *   <div.tabs-inner>
+ *      <a.tab>text</a>
+ *      <a.tab disabled>current tab</a>
+ *   </div>
+ * </div>
+ */
+.tabs {
+    border-bottom: 2px solid #666;
+    contain: size layout style;
+    background: @content_background_color;
+}
+.tabs-inner {
+    display: flex;
+    margin: 0 auto -2px auto;
+    box-sizing: border-box;
+    padding: 0 0 0 .5rem;
+}
+.layout-narrow .tabs-inner {
+    max-width: @narrow_width;
+}
+/* base tab styles */
+.tabs-inner > a {
+    border: 2px solid #666;
+    border-radius: .5rem .5rem 0 0;
+    background: @content_background_color;
+    text-decoration: none;
+    line-height: 1.7;
+    padding: 0.125rem 1rem 0 1rem;
+    margin: 0 .5rem 0 0;
+}
+/* current tab */
+.tabs-inner > a[aria-disabled="true"] {
+    border-bottom-width: 0;
 }
 
 /* Mostly used for the login page. */
