Mark down remaining tasks

--- a/assets/base.less
+++ b/assets/base.less
@@ -246,6 +246,9 @@ input[type=submit],
 .tabs-inner > a[aria-disabled="true"] {
     border-bottom-width: 0;
 }
+/* TODO: Make tabs expand to full width on narrow screens. */
+/* TODO: Check what happens in very narrow windows. */
+/* TODO: Make less ugly. */
 
 /* Mostly used for the login page. */
 form.small-form {
