Fix errant constrain declaration
This fixes layout in Chrome. I guess Firefox hasn't implemented
constrain yet.

--- a/assets/base.less
+++ b/assets/base.less
@@ -220,7 +220,7 @@ input[type=submit],
  */
 .tabs {
     border-bottom: 2px solid #666;
-    contain: size layout style;
+    contain: layout style;
     background: @content_background_color;
 }
 .tabs-inner {
