Scale <video> to fit
Closes #128.

--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -45,7 +45,7 @@ article {
             margin: 12px;
         }
 
-        img {
+        img, video {
             max-width: 100%;
             height: auto;
         }
