--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -4,24 +4,51 @@
     .content-colors;
 }
 .inventory-header-inner {
+    max-width: var(--layout-max-width);
     margin: 0 auto;
     padding: @text_padding;
     box-sizing: border-box;
 }
-.layout-narrow .inventory-header-inner {
-    max-width: @narrow_width;
-}
 
-.inventory-item-wrap {
-    margin: 0 0 1px 0;
+.inventory {
+    margin: 0 0 2px 0;
     .content-colors;
 }
 
-.inventory-item {
+.inventory-inner {
+    max-width: var(--layout-max-width);
     margin: 0 auto;
     padding: @text_padding;
     box-sizing: border-box;
+}
 
+.inventory-table {
+    display: block;
+    margin: 0 -0.25rem;
+
+    thead, tbody {
+        display: block;
+    }
+    tr {
+        display: grid;
+        grid-template-columns: 2rem 2.5rem 2fr 1fr 1fr 1.5rem;
+    }
+    th, td, td > a {
+        display: block;
+        text-align: left;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    .col-feed {
+    }
+    .col-unread {
+    }
+    .col-edit {
+    }
+}
+
+.inventory-item {
     h2 {
         font: normal 1.25rem / 1.5rem sans-serif;
         padding: 0 0 1rem 0;
@@ -46,33 +73,16 @@
         }
     }
 }
-.layout-narrow .inventory-item {
-    max-width: @narrow_width;
-}
 
-.add-feed {
-    .content-colors;
-}
-.add-feed-inner {
-    margin: 0 auto;
-    padding: @text_padding;
-    box-sizing: border-box;
+form.add-feed-form {
+    display: flex;
 
-    form {
-        display: flex;
-
-        input[type=url] {
-            flex: 1 1 100%;
-            min-width: 0;
-        }
-        input[type=submit] {
-            flex: 1 1 0;
-            margin-left: @text_padding;
-        }
+    input[type=url] {
+        flex: 1 1 100%;
+        min-width: 0;
+    }
+    input[type=submit] {
+        flex: 1 1 0;
+        margin-left: @text_padding;
     }
 }
-
-.layout-narrow .add-feed-inner {
-    max-width: @narrow_width;
-}
-
