Somewhat less terrible coloring

--- a/assets/widgets/icons.less
+++ b/assets/widgets/icons.less
@@ -1,3 +1,8 @@
+/* Icons have this class by default, which makes them a generic gray. */
+.icon {
+    color: #666;
+}
+
 @heart_color: #9b1559;
 @check_color: #2a6e12;
 
