--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -7,20 +7,28 @@ article {
     margin: 0.5rem 0;
     word-wrap: break-word; /* Don't let long lines break the layout */
 
+    & > * {
+        max-width: var(--layout-max-width);
+        padding: 0 0.25rem;
+        margin: 0 auto;
+    }
+
     /* NB: This is written so that it can't affect <h1> tags within .content */
     & > h1 {
         font: normal 1.125rem / 1.5rem sans-serif;
-        margin: 0 0 0.67em 0;
+        margin-bottom: 0.67em;
         padding-top: 0.75rem;
         padding-bottom: 0.125rem;
-        & > a {
-            display: block;
+
+        a {
+            display: grid;
+            grid-template-columns: 1fr 1em; /* push icon to the far right */
         }
     }
 
     .meta {
         color: @quiet_text_color;
-        margin: 0 0 1em 0;
+        margin-top: 1rem;
         p {
             margin: 0;
         }
@@ -61,13 +69,3 @@ article {
     }
 }
 
-article > * {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-}
-
-.layout-narrow article > * {
-    max-width: @narrow_width;
-    margin-left: auto;
-    margin-right: auto;
-}
