Rework form styling
Closes #138: fixes checkbox styling (it doesn't look great, but it
doesn't look busted anymore).

Progress in the direction of #134.

--- a/assets/globals.less
+++ b/assets/globals.less
@@ -29,6 +29,10 @@
 @logo_orange: #fb6500;
 @logo_orange_dark: #da5200;
 
+@focus_blue_light: #37ABE5;
+@focus_blue: #0098ff;
+@focus_blue_dark: #0070bb;
+
 @narrow_width: 50rem;
 
 .flat-button() {
@@ -37,7 +41,6 @@
 
     border: @button_border_width solid transparent;
     background: transparent;
-    border-radius: @text_padding;
     transition: border-color 0.05s, background 0.1s;
 }
 
