D'oh, don't reimplement what the browser does

--- a/assets/base.less
+++ b/assets/base.less
@@ -114,6 +114,9 @@ select[multiple] {
     color: @content_text_color;
     --border-color: @quiet_text_color;
 }
+select[multiple] {
+    height: auto; /* allow size attribute to have an effect */
+}
 
 .text-button {
     .form-item-layout;
