--- a/assets/base.less
+++ b/assets/base.less
@@ -266,9 +266,12 @@ select[multiple] {
 
 /**
  * <div.tabs>
- *   <div.tabs-inner>
+ *   <div.tabs-tabs>
  *      <a.tab>text</a>
  *      <a.tab disabled>current tab</a>
+ *   </div>
+ *   <div.tabs-buttons>
+ *      <a>text</a>
  *   </div>
  * </div>
  */
@@ -277,7 +280,7 @@ select[multiple] {
     contain: layout style;
     background: @content_background_color;
 }
-.tabs-inner {
+.tabs-tabs {
     display: flex;
     margin: 0 auto -2px auto;
     padding: 0 0 0 .5rem;
@@ -285,7 +288,7 @@ select[multiple] {
     box-sizing: border-box;
 }
 /* base tab styles */
-.tabs-inner > a {
+.tabs-tabs > a {
     border: 2px solid #666;
     border-radius: .5rem .5rem 0 0;
     background: @content_background_color;
@@ -295,15 +298,18 @@ select[multiple] {
     margin: 0 .5rem 0 0;
 }
 /* current tab */
-.tabs-inner > a[aria-disabled="true"] {
+.tabs-tabs > a[aria-disabled="true"] {
     border-bottom-width: 0;
 }
+.tabs-buttons {
+    display: none; /* TODO */
+}
 @media screen and (max-width: 34em) {
-    .tabs-inner {
+    .tabs-tabs {
         padding: 0;
         min-height: 40px;  /* tappable size */
     }
-    .tabs-inner > a {
+    .tabs-tabs > a {
         margin: 0;
         line-height: 1.2;
         border-radius: 0;
@@ -312,13 +318,13 @@ select[multiple] {
         flex-basis: 100%;
         text-align: center;
     }
-    .tabs-inner > a + a {
+    .tabs-tabs > a + a {
         border-left-width: 0;
     }
-    .tabs-inner > a:first-child {
+    .tabs-tabs > a:first-child {
         border-left-width: 0;
     }
-    .tabs-inner > a:last-child {
+    .tabs-tabs > a:last-child {
         border-right-width: 0;
     }
 }
