--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -53,4 +53,10 @@
             color: @quiet_text_color;
         }
     }
+
+    .icon-heart {
+        position: relative;
+        padding-left: 0.5rem;
+        top: 0.1rem;
+    }
 }
