--- a/assets/widgets/Tabs.less
+++ b/assets/widgets/Tabs.less
@@ -42,7 +42,8 @@
     }
     &:focus {
         outline: none;
-        --tab-shape-color: var(--form-focus-color);
+        /* FIXME need a var for this, it was copied from .form-item-focusable:focus */
+        --tab-shape-color: @focus_blue_dark;
     }
 }
 /* current tab */
