--- a/assets/base.less
+++ b/assets/base.less
@@ -40,6 +40,7 @@ html {
     a:link[aria-disabled=true],
     a:visited[aria-disabled=true] {
         text-decoration-line: none;
+        cursor: default;
     }
 }
 
@@ -332,5 +333,6 @@ footer {
     a:link[aria-disabled=true],
     a:visited[aria-disabled=true] {
         text-decoration-line: none;
+        cursor: default;
     }
 }
